@@ -80,4 +80,7 @@ PREFIX = YES;
 # BANNER: Report when first connecting to server.
 BANNER = NO;
 
+# HANGUP: Send disconnect message when Bluelog exits
+HANGUP = NO;
+
 # EOF
